[package]
name = "leptos_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.5", features = ["csr"] }

gloo-timers = { version = "0.2", features = ["futures"] }
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"